<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    tools:context=".Login.Login">


    <TextView
        android:id="@+id/lezzet_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:fontFamily="@font/exo"

        android:lineHeight="@dimen/_35sdp"

        android:text="@string/enLezzetliLoginText"
        android:textColor="@color/White"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/girisYap_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/girisYap_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:fontFamily="@font/exo"
        android:text="@string/girisYapText"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/lezzet_tv" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/eposta_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/epostaText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor"
        android:fontFamily="@font/exo"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/girisYap_tv" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/sifre_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/exo"
        android:hint="@string/sifreText"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eposta_et"
        app:layout_constraintTop_toBottomOf="@+id/eposta_et" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/girisYap_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:backgroundTint="@color/ColorMain"
        android:fontFamily="@font/exo"
        android:text="@string/girisYapText"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sifre_et"
        app:layout_constraintTop_toBottomOf="@+id/sifre_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guestLogin_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_98sdp"
        android:backgroundTint="@color/guestButtonColor"
        android:text="@string/guestLogin"
        android:textAllCaps="false"
        android:textColor="@color/guestButtonTextColor"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/sifre_et" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/sifreUnutttum_et"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo"
        android:text="@string/sifreUnuttumText"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/girisYap_button"
        app:layout_constraintStart_toStartOf="@+id/girisYap_button"
        app:layout_constraintTop_toBottomOf="@+id/girisYap_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_12sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_20sdp" />

    <TextView

        android:id="@+id/hesapyok_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/exo"
        android:text="@string/HesabınızYokmuText"
        android:textColor="@color/White"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kayitOl_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestLogin_button"
        app:layout_constraintVertical_bias="0.956" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/kayitOl_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo"
        android:text="@string/KayıtOlText"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/hesapyok_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hesapyok_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>