<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".MainPage.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/profileimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hello_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/merhaba"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toEndOf="@+id/profile_iv"
        app:layout_constraintTop_toTopOf="@+id/profile_iv" />


    <TextView
        android:id="@+id/username_tv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Tahir"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hello_tv"
        app:layout_constraintTop_toBottomOf="@+id/hello_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/neyemek_tv"
        android:layout_width="318dp"
        android:layout_height="165dp"
        android:layout_marginTop="32dp"
        android:letterSpacing="-0.02"
        android:text="@string/bugünneyiyiyelim"
        android:textColor="@color/White"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_iv"
        app:layout_constraintTop_toBottomOf="@+id/username_tv" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        style="@style/etButtonStyle"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/corneredittext"
        android:drawableStart="@drawable/ic_search"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:hint="@string/canımneistiyortext"
        android:inputType="text"
        android:textColorHint="@color/grayHint"
        android:textColor="@color/ColorMain"
        app:layout_constraintEnd_toEndOf="@+id/neyemek_tv"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/neyemek_tv"
        app:layout_constraintTop_toBottomOf="@+id/neyemek_tv" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/ColorMain"
        android:text="@string/aramayap"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>
